# aoc_2024

./: LICENSE
day_1/: main.cpp
day_10/: CMakeLists.txt  main.cpp
day_2/: CMakeLists.txt  main.cpp
day_3/: input.txt  main.cpp
day_5/: main.cpp
day_6/: main.cpp
day_7/: main.cpp
day_8/: CMakeLists.txt  main.cpp
day_9/: CMakeLists.txt  main.cpp  post-sorted.txt  pre-sorted.txt
fifth/: CMakeLists.txt
first/: CMakeLists.txt
fourth/: CMakeLists.txt  main.cpp
seventh/: CMakeLists.txt  input.txt  main.cpp
sixth/: CMakeLists.txt  main_2.cpp
template/: .clang-format  CMakeLists.txt
third/: CMakeLists.txt
